@@ -10,6 +10,7 @@ SET ( FILES
   face7.cpp
   face8.cpp
   facehelper.cpp
+  facenumbering.cpp
   facetpairing2.cpp
   facetpairing4.cpp
   facetpairing5.cpp
